# mlops_hw

./: .dvcignore  .gitignore  README.md  data.dvc  pyproject.toml
.dvc/: config
conf/: config.yaml  data.yaml  image_model.yaml  mlflow.yaml  text_model.yaml  train.yaml
mlops_hw/: .gitignore  LICENSE  data.py  dataset.py
mlops_hw/data/: data.py  datamodule.py  preprocess_data.py
mlops_hw/models/: image_model.py  joint_model.py  text_models.py
mlops_hw/training/: train.py
shopee_product_matching/training/: train.py
