[project]
name = "mlops-hw"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim-de",email = "maksim.arkhipov.020@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "pandas (==2.2.3)",
    "transformers (>=4.57.3,<5.0.0)",
    "torch (==2.0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
